build: enable verbatimModuleSyntax, composite TS compiler options
The former was introduced in Typescript 5.0 in 2023.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,9 @@
     "skipLibCheck": true,
     "isolatedModules": true,
     "importsNotUsedAsValues": "error",
-    "noUncheckedIndexedAccess": true
+    "verbatimModuleSyntax": true,
+    "noUncheckedIndexedAccess": true,
+    "composite": true
   },
   "exclude": ["node_modules"]
 }
