--- a/package.json
+++ b/package.json
@@ -121,7 +121,7 @@
     "eslint-plugin-import": "2.26.0",
     "prettier": "3.2.5",
     "standard-version": "9.5.0",
-    "ts-eager": "2.0.2",
+    "tsx": "^4.19.3",
     "typescript": "^5.8.2",
     "vite": "5.1.5",
     "vitest": "1.3.1",
