--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "@typescript-eslint/eslint-plugin": "5.47.1",
     "@typescript-eslint/parser": "5.48.0",
     "@vitest/coverage-v8": "1.3.1",
+    "cross-env": "7.0.3",
     "esbuild": "0.16.13",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
