--- a/package.json
+++ b/package.json
@@ -114,7 +114,7 @@
     "@types/vscode": "1.65.0",
     "@typescript-eslint/eslint-plugin": "5.47.1",
     "@typescript-eslint/parser": "5.48.0",
-    "@vitest/coverage-v8": "1.3.1",
+    "@vitest/coverage-v8": "^1.4.0",
     "cross-env": "7.0.3",
     "esbuild": "0.16.13",
     "eslint": "8.57.0",
@@ -124,8 +124,8 @@
     "standard-version": "9.5.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2",
-    "vite": "5.1.5",
-    "vitest": "1.3.1",
+    "vite": "^5.1.5",
+    "vitest": "^1.4.0",
     "vsce": "2.15.0"
   },
   "dependencies": {
