--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "@typescript-eslint/parser": "5.48.0",
     "@vitest/coverage-v8": "^1.4.0",
     "cross-env": "7.0.3",
+    "es-main": "1.3.0",
     "esbuild": "0.16.13",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
