--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
     "moduleResolution": "node",
     "target": "esnext",
     "outDir": "out",
-    "lib": ["ES2019"],
+    "lib": [
+      "ES2019"
+    ],
     "sourceMap": true,
     "rootDir": ".",
     "strict": true,
@@ -12,7 +14,10 @@
     "isolatedModules": true,
     "verbatimModuleSyntax": true,
     "noUncheckedIndexedAccess": true,
-    "composite": true
+    "composite": true,
   },
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules",
+    "./out"
+  ]
 }
