--- a/package.json
+++ b/package.json
@@ -113,21 +113,26 @@
   "devDependencies": {
     "@commitlint/config-conventional": "19.2.2",
     "@commitlint/types": "19.0.3",
+    "@eslint/js": "9.21.0",
+    "@types/eslint-config-prettier": "6.11.3",
     "@types/node": "18.19.21",
     "@types/vscode": "1.65.0",
-    "@typescript-eslint/eslint-plugin": "5.47.1",
-    "@typescript-eslint/parser": "5.48.0",
+    "@typescript-eslint/eslint-plugin": "^8.26.0",
+    "@typescript-eslint/parser": "^8.26.0",
     "@vitest/coverage-v8": "^1.4.0",
     "cross-env": "7.0.3",
     "es-main": "1.3.0",
     "esbuild": "0.16.13",
-    "eslint": "8.57.0",
+    "eslint": "^9.21.0",
     "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-import": "2.26.0",
+    "eslint-import-resolver-typescript": "3.8.3",
+    "eslint-plugin-import-x": "4.6.1",
+    "globals": "16.0.0",
     "prettier": "3.2.5",
     "standard-version": "9.5.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2",
+    "typescript-eslint": "8.26.0",
     "vite": "^5.1.5",
     "vitest": "^1.4.0",
     "vsce": "2.15.0"
