--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
   },
   "main": "./dist/extension.js",
   "scripts": {
-    "build": "esbuild ./src/extension.ts ./src/worker/index.ts --bundle --outdir=dist --external:vscode --external:@commitlint/lint --external:@commitlint/load --external:@commitlint/parse --format=cjs --platform=node --target=node14.16.0 --sourcemap",
+    "build": "esbuild ./src/extension.ts ./src/worker/index.ts --bundle --outdir=dist --external:vscode --external:@commitlint/lint --external:@commitlint/load --external:@commitlint/parse --format=cjs --platform=node --target=node14.16.0 --sourcemap --tsconfig src/tsconfig.json",
     "watch": "npm run -s build -- --watch",
     "build:production": "npm run -s build -- --minify",
     "package": "npm run -s build:production && vsce package --githubBranch main",
