--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -2,7 +2,7 @@
   "$schema": "https://json.schemastore.org/tsconfig#",
   "//": {
     "description": "config extended by all tsconfigs in this repo",
-    "compilerOptions.target": "Limited by file:///./.nvmrc. Node.js 18.16.1 (through 24.0.0) are 97% compatible with ES2022. They don't support 'shows up in flags' of 'tc39/proposal-regexp-match-indices'. Node.js 18.16.1 has merely 30% of ES2023 implemented.",
+    "compilerOptions.target": "Limited by file:///./.nvmrc. Node.js 18.16.1 (through 24.0.0) are 97% compatible with ES2022. They don't support 'shows up in flags' of 'tc39/proposal-regexp-match-indices'. Node.js 18.16.1 has merely 30% of ES2023 implemented."
   },
   "compilerOptions": {
     "module": "NodeNext",
@@ -16,7 +16,7 @@
     "isolatedModules": true,
     "verbatimModuleSyntax": true,
     "noUncheckedIndexedAccess": true,
-    "composite": true,
+    "composite": true
   },
   "exclude": [
     "node_modules",
