--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,14 +5,7 @@
     "allowJs": true,
     "checkJs": true
   },
-  "include": [
-    "*.cjs",
-    "*.cts",
-    "*.js",
-    "*.mjs",
-    "*.mts",
-    "*.ts"
-  ],
+  "include": ["*.cjs", "*.cts", "*.js", "*.mjs", "*.mts", "*.ts"],
   "references": [
     {
       "path": "./src/tsconfig.json"
